#9 - starter.html 에 삭제 예고하는 TODO 추가
이는 개발을 위해 잠시 참고하던 샘플 페이지이므로
뷰 개발이 끝나면 삭제해야 함
이를 잊지 않도록 `TODO` 주석 추가

--- a/src/main/resources/templates/starter.html
+++ b/src/main/resources/templates/starter.html
@@ -3,6 +3,7 @@
 This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
+<!-- TODO: 샘플이므로 서비스 뷰 구현 끝나면 삭제할 것 -->
 <html lang="ko">
 <head>
   <meta charset="utf-8">
