--- a/src/main/resources/templates/management/user-accounts.html
+++ b/src/main/resources/templates/management/user-accounts.html
@@ -28,7 +28,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>uno</td>
+            <td><a data-toggle="modal" data-target="#layout-modal">uno</a></td>
             <td>Uno</td>
             <td>uno@email.com</td>
             <td>This is memo.</td>
@@ -54,6 +54,9 @@
     <footer id="layout-footer">푸터 삽입부</footer>
   </div>
 
+  <div class="modal fade" id="layout-modal"></div>
+  <!-- /.modal -->
+
   <!--/* REQUIRED SCRIPTS */-->
   <script id="layout-scripts">/* 공통 스크립트 삽입부 */</script>
 
@@ -77,6 +80,30 @@
         "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"],
         "pageLength": 10
       }).buttons().container().appendTo('#main-table_wrapper .col-md-6:eq(0)'); // main-table_wrapper ID는 플러그인에 의해 자동 생성됨
+    });
+  </script>
+  <script>
+    $(document).ready(() => {
+      $('#layout-modal').on('show.bs.modal', (event) => {
+        console.log($(event.relatedTarget))
+        const userId = $(event.relatedTarget).data('id');
+
+        fetch(`/management/user-accounts/${userId}`)
+            .then(response => response.json())
+            .then(data => {
+              const bodyText =
+                  "- 닉네임: " + data.nickname + "\n" +
+                  "- 이메일: " + data.email + "\n" +
+                  "- 메모: " + data.memo;
+
+              $('.modal-title').text(data.nickname);
+              $('.modal-body pre').text(bodyText);
+              $('.modal-footer form').attr('action', `/management/user-accounts/${userId}`);
+            })
+            .catch(error => {
+              console.error('회원 정보 로딩 실패: ', error);
+            });
+      });
     });
   </script>
 </body>
