#21 - 어드민 회원 기능, 컨트롤러, 뷰 구현

--- a/src/main/resources/templates/admin/members.html
+++ b/src/main/resources/templates/admin/members.html
@@ -27,7 +27,7 @@
 
   <!--/* 페이지 전용 스크립트 */-->
   <script src="/js/plugins/jsgrid/jsgrid.min.js"></script>
-  <script>
+  <script id="jsgrid-javascript">
     $(function () {
       $("#jsgrid-admin-members").jsGrid({
         height: "100%",
