#24 - 다크 모드 적용
AdminLTE 공식 홈페이지 가이드를 참고하여,
다크모드를 구현한다.
다크모드를 적용한 부위는:

* 상단 네비게이션 바 바탕색
* 본문
* 본문, footer 글자 하이라이트 색상
* 모달창 글자 하이라이트

또한 session storage 를 사용하여 마지막 다크 모드 토글 상태를
브라우저가 기억하게 하여 사용 경험에 연속성을 부여함.

--- a/src/main/resources/templates/layouts/layout-scripts.html
+++ b/src/main/resources/templates/layouts/layout-scripts.html
@@ -8,5 +8,44 @@
   <script src="/js/plugins/jquery/jquery.min.js"></script>
   <script src="/js/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/js/adminlte.min.js"></script>
+
+  <script>
+    $(document).ready(() => {
+      if (sessionStorage.getItem('darkMode') === "true") {
+        $('body').addClass('dark-mode');
+        $('header nav')
+            .addClass('navbar-dark')
+            .removeClass('navbar-light');
+        $('main, footer')
+            .addClass('accent-light')
+            .removeClass('accent-dark');
+        $('.modal-body pre').addClass('text-light');
+        $('#dark-mode-checkbox').prop('checked', true);
+      }
+    })
+    $('#dark-mode-checkbox').on('click', function() {
+      if ($(this).is(':checked')) {
+        $('body').addClass('dark-mode');
+        $('header nav')
+            .addClass('navbar-dark')
+            .removeClass('navbar-light');
+        $('main, footer')
+            .addClass('accent-light')
+            .removeClass('accent-dark');
+        $('.modal-body pre').addClass('text-light');
+        sessionStorage.setItem('darkMode', "true");
+      } else {
+        $('body').removeClass('dark-mode');
+        $('header nav')
+            .addClass('navbar-light')
+            .removeClass('navbar-dark');
+        $('main, footer')
+            .addClass('accent-dark')
+            .removeClass('accent-light');
+        $('.modal-body pre').removeClass('text-light');
+        sessionStorage.setItem('darkMode', "false");
+      }
+    });
+  </script>
 </body>
 </html>
